# etl_spark_trial_run

./: .gitignore  docker-compose.yml  docs.md  pyproject.toml  schema.sql
data/: clean_events
data/raw/: ad_events - day_2024_01_02.csv  ad_events-day_2024_01_01.csv
src/adtech_etl/: etl.py  extract.py  load.py  spark_job.py  transform.py
