[project]
name = "adtech-etl"
version = "0.1.0"
description = "ETL & Spark take-home assignment for adtech data engineering"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",

    "pyspark>=3.5.0",

    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",

    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]